# alt-cli

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  fs_helpers.rs  main.rs
src/commands/: list.rs  mod.rs  rename.rs  switch.rs
