[package]
name = "alt-cli"
description = "Alternative history for your git repo"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
readme = "README.md"

[[bin]]
name = "alt"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
snafu = "0.8"
git2 = "0.20"
fastrand = "2.3"
stdext = "0.3"
